--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Text&display=swap");
+html{
+  font-size: 10px;
+}
 body {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: hsl(237, 18%, 59%);
   background-color: hsl(234, 17%, 12%);
   background-color: hsl(236, 21%, 26%);
@@ -13,7 +16,7 @@ body {
 }
 .content {
   background: url(./images/bg-stars.svg);
-  height: 80vh;
+  height: 80%;
   width: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -27,22 +30,25 @@ body {
 }
 .box {
   display: flex;
-  margin-top: 20px;
+  width: 95%;
+  max-width: 500px;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 .content h1 {
   /* border: 1px solid; */
-  font-size: 24px;
-  width: 80%;
+  font-size: 2rem;
   letter-spacing: 6px;
   word-spacing: 3px;
   text-transform: uppercase;
   text-align: center;
-  padding: 10px;
+  padding:0em 1em ;
 }
 #count {
-  margin-bottom: 40px;
-  font-size: 20px;
+  font-size: 1.5rem;
   letter-spacing: 3px;
+  padding: 0 1.1em;
+  text-align: center;
 }
 .text {
   color: hsl(236, 21%, 26%);
@@ -51,49 +57,51 @@ body {
 }
 .total {
   background-color: black;
-  height: 100px;
-  min-width: 100px;
+  display: flex;
+  flex-direction: column;
+  height: 60px;
+  width: 20%;
+  max-width: 100px;
   position: relative;
   text-align: center;
   border-radius: 7px;
-  margin: 10px;
+  margin-top: 2em;
   box-shadow: 0 0 10px #aaa;
 }
+
 .number {
   position: absolute;
-  left: 30px;
-  margin-top: -75%;
+  left: 35%;
   z-index: 1;
   color: hsl(345, 95%, 68%);
   font-weight: 700;
-  font-size: 35px;
+  font-size: 2rem;
   opacity: 0.7;
 }
 #minutes {
-  left: 20px;
+  left: 20%;
 }
 #second {
-  font-size: 32px;
-  left: 4px;
-  margin-top: -75%;
+  font-size: ;
+  left: 0;
 }
 .first {
-  min-width: 100px;
-  min-height: 50px;
+  max-width: 100px;
+  min-height: 30px;
   background-color: hsl(236, 21%, 26%);
   display: flex;
   align-items: flex-end;
   border-radius: 7px;
 }
 .second {
-  min-width: 100px;
-  min-height: 50px;
+  max-width: 100px;
+  min-height: 30px;
   background-color: hsl(235, 16%, 14%);
   border-radius: 7px;
 }
 .footer {
   background: url(./images/pattern-hills.svg);
-  height: 20vh;
+  height: 20%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -104,13 +112,11 @@ body {
   align-items: center;
 }
 .socials {
-  margin-bottom: 10px;
+  margin-bottom: 2em;
+  display: flex;
 }
 #facebook {
-  padding: 10px;
-  display: inline-block;
-  width: 10px;
-  height: 10px;
+  padding: 2em;
   background-image: url(./images/icon-facebook.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -121,10 +127,7 @@ body {
   transition: all ease 0.9s;
 }
 #instagram {
-  padding: 10px;
-  display: inline-block;
-  width: 10px;
-  height: 10px;
+  padding: 2em;
   background-image: url(./images/icon-instagram.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -135,10 +138,7 @@ body {
   transition: all ease 0.9s;
 }
 #pinterest {
-  padding: 10px;
-  display: inline-block;
-  width: 10px;
-  height: 10px;
+  padding: 2em;
   background-image: url(./images/icon-pinterest.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -154,4 +154,49 @@ body {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+@media only screen and (min-width: 300px){
+  /* .box {
+  display: flex;
+  width: 70%;
+  max-width: 650px;
+  margin: 0 auto;
+  justify-content: space-between;
+} */
+#minutes {
+  left: 30%;
+}
+#second {
+  font-size: ;
+  left: 15%;
+}
+}
+@media only screen and (min-width: 400px){
+  /* .box {
+  display: flex;
+  width: 70%;
+  max-width: 650px;
+  margin: 0 auto;
+  justify-content: space-between;
+} */
+.total{
+  height: 100px;
+}
+.first,.second{
+  min-height: 50px;
+}
+.number{
+  top: 10%;
+  font-size: 2.5rem;
+}
+.text{
+  font-size: 1.5rem;
+}
+#minutes {
+  left: 40%;
+}
+#second {
+  font-size: ;
+  left: 25%;
+}
 }
